# fht-animation

./: Cargo.toml  README.md
src/: iced.rs  lib.rs
src/curve/: cubic.rs  mod.rs  spring.rs
